<resources>
    <string name="error">Error</string>
    <string name="unknown_error">The system has returned an unknown error. \nPlease try again</string>
    <string name="warning">Warning</string>
    <string name="notice">Notice</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="server_error">Server Connection Failed. \nPlease try again later.</string>
    <string name="connection_error">Connection Error</string>
    <string name="try_again">Try Again</string>
    <string name="no_network">Unable to connect with the internet.\nCheck your internet and try again.</string>
    <string name="you_have_denied_permission">You have forcefully denied some of the required permissions for this action. Please open settings, go to permissions and allow them.</string>
</resources>
