<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="event"
            type="com.base.dialog.ConnectionErrorDialog" />
    </data>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ll_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_white_corner"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/positive_80dp"
            android:layout_height="@dimen/positive_80dp"
            android:layout_marginTop="@dimen/positive_10dp"
            android:src="@drawable/ic_cloud_off_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/positive_15dp"
            android:layout_marginStart="@dimen/positive_15dp"
            android:layout_marginTop="@dimen/positive_5dp"
            android:text="@string/connection_error"
            android:textAllCaps="true"
            android:textColor="@color/error_color"
            android:textSize="@dimen/text_size_7sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/positive_15dp"
            android:layout_marginStart="@dimen/positive_15dp"
            android:layout_marginTop="@dimen/positive_5dp"
            android:gravity="center"
            android:text="@string/no_network"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_6sp" />

        <com.base.widgets.RippleTextView
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/positive_20dp"
            android:gravity="center"
            android:paddingBottom="@dimen/positive_8dp"
            android:paddingTop="@dimen/positive_8dp"
            android:text="@string/try_again"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_size_7sp"
            android:textStyle="bold"
            android:onClick="@{() -> event.onTryAgain()}"
            app:rtv_corners="20dp"
            app:rtv_normal_color="@color/colorTransparent"
            app:rtv_stroke_color="@color/colorBlue"
            app:rtv_stroke_width="2dp" />

    </androidx.appcompat.widget.AppCompatTextView>

</layout>